=========================================================================
CHANGE LOG
=========================================================================

2011-07-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed lots of warnings on build; cleaning up code

2011-07-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Multi-model PDBs now write ENDMDL after models and END at end of file; thanks to Thomas Holder for the patch. 

2011-06-23 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Code cleaning; reducing number of warnings

2011-06-22 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Small state bugfix

	* Feedback bugfix

	* Updated TNT to 3.0b

2011-06-16 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* suppress guess valences warning message to Blather

2011-06-09 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed volume shader; esp for Ubuntu

2011-06-08 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* "fix" for colored sticks problem

	* fixed File > Save Molecule using object's state

	* fog/shading in shaders

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* bugfix for drawing ribbons, drastically increases their rendering (3x+)

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed a bug where group names were clipped

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed state bug in distances for (all)

	* fixed ray trace bug when not using Python

	* fixed nucleic acid residue naming (Thanks to Thomas Holder)

2011-05-12 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* more robust space group/pt group reading from maps

2011-05-02 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed state bug in distances for (all)

	* fixed ray trace bug when not using Python

	* fixed nucleic acid residue naming (Thanks to Thomas Holder)

2011-05-02 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed shader bug

	* v1.4.1 release
