@@ -652,7 +652,7 @@ static PyObject *py_glu_Project(PyObject * self, PyObject * args)
 #elif defined(HAVE_EXTENSIONS_ARRAYOBJECT_H)
 #include "Extensions/arrayobject.h"
 #elif defined(HAVE_NUMERIC_ARRAYOBJECT_H)
-#include "Numeric/arrayobject.h"
+#include "numpy/oldnumeric.h"
 #elif defined(HAVE_NUMERICAL_ARRAYOBJECT_H)
 #include "numerical/arrayobject.h"
 #else
